# ugv-integration-2526

./: .gitignore  .gitmodules  CLAUDE_HISTORY.md  GCSTest.py  README.md  gcs_udp_listener.py  howtorun.md  qeyla.md  ugv_control._subscriber.py  ugv_control_pub.py  ugv_dhw_stm.py
.claude/: settings.local.json
Logs/: log0.txt
[New]/: argagaga.docx
[UGV-Firmware]/: frhtserteresrt.docx
[UGV-Integration]/: ugv_drive_stm.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
manual_control/: alex_sample_pub.py  game_pad_out.py  ugvgroundvehicle.idl  ugvgroundvehicle_program.py  ugvgroundvehicle_subscriber.py
manual_control_old/: README.txt  USER_QOS_PROFILES.xml  ugvgroundvehicle_publisher.py
scripts/: gcs_command_manual.py  gcs_command_simulator.py  gcs_xbee_receiver.py  mock_telemetry_sender.py
src/NGCP_UGV/: package.xml  setup.cfg  setup.py
src/NGCP_UGV/ngcp_ugv/: ugv_control_pub.py  ugv_control_sub.py
src/NGCP_UGV/ngcp_ugv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/NGCP_UGV/ngcp_ugv/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/old_manual_control/: README.txt  intro.py  manual_control_sub.py  ugvgroundvehicle_publisher.py  ugvgroundvehicle_subscriber.py
src/ugv_comms/: package.xml  setup.cfg  setup.py
src/ugv_comms/launch/: ugv_all.launch.py  ugv_comms.launch.py
src/ugv_comms/ugv_comms/: xbee_command_receiver.py
src/ugv_control/: package.xml  setup.py
src/ugv_control/ugv_control/: ugv_armcontrol_sub.py
src/ugv_msgs/: CMakeLists.txt  package.xml
src/ugv_msgs/msg/: ManCtrl.msg
src/ugv_telemetry/: setup.py
src/ugv_telemetry/ugv_telemetry/: xsens_data_conversion.py
src/ugv_teleop/: package.xml  setup.py
src/ugv_teleop/launch/: ugv_control.launch.py
src/ugv_teleop/ugv_teleop/: crsf_joy_node.py  ugv_arm.py  ugv_control_pub.py  ugv_control_pub_radiomaster.py  ugv_control_sub.py  ugv_control_sub_radiomaster.py
src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
src/xsens_mti_ros2_driver/scripts/: comms_protocol.py  coord_dump.py  jetson_gps_sender (1).py  jetson_gps_sender.py  ntrip_coords.txt
ugv-integration/: README.md  ugv_control.py
ugv-integration/manual_control/: Controller.py  manual_control_pub.py  sample_pub.py
ugv-integration/manual_control/ugvgroundvehicle/: ugvgroundvehicle.py
ugv-integration/ugv_controller/: package.xml  setup.cfg  setup.py
ugv-integration/ugv_controller/ugv_controller/: ugv_control.py
ugv-integration/ugv_msgs/: CMakeLists.txt  package.xml
ugv-integration/ugv_msgs/msg/: AutoCtrl.msg  ManCtrl.msg
(+272 files in other folders)
