<?xml version="1.0"?>
<package format="3">
  <name>ngcp_ugv</name>
  <version>0.0.0</version>
  <description>UGV Control Node</description>

  <maintainer email="levonmalkhasian@gmail.com">lev</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ugv_msgs</depend>

  <!-- Optional: for joystick/gamepad input -->
  <exec_depend>python3-inputs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>