<?xml version="1.0"?>
<package format="3">
  <name>ugv_control</name>
  <version>0.1.0</version>
  <description>UGV control node (gamepad → ManCtrl/AutoCtrl)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>ugv_msgs</exec_depend>
  <exec_depend>python3-inputs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
